Fix bug with displaying tooltip for 12:00PM and make scroll visible.

--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -58,7 +58,7 @@
 }
 
 ::-webkit-scrollbar {
-    height: 5px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track:vertical {
